# hf2dcat

./: .gitignore  LICENSE  README.md  mapping.md  pyproject.toml  pytest.ini
src/hf2dcat/: cli.py  cli_utils.py
src/huggingface_converter/: __init__.py  create_extension_mapping.py  create_license_mapping.py  pyproject.toml
src/huggingface_converter/extension_mappings/: extension2_mediatype_filetype_mappings.json  filetypes-skos.rdf
src/huggingface_converter/huggingface_converter/: constants.py  enums.py  hf_converter.py  shacl_validator.py  translation_manager.py  vocabulary_manager.py
src/huggingface_converter/license_code_table/: hf2dcatap_de_license_mappings.json  hf2dcatap_license_mappings.json
src/huggingface_fetcher/: __init__.py  check_api.py  fetcher.py  pyproject.toml
tests/: conftest.py  test_cli_help.py
tests/cassettes/: test_convert_from_cli.yaml  test_convert_model.yaml  test_convert_model[model].yaml  test_converter_no_translation_vcr.yaml  test_fetch_batch_vcr[model].yaml  test_fetch_dataset_names_from_csv.yaml  test_fetch_dataset_names_from_file_vcr.yaml  test_fetch_model_names_from_file_vcr.yaml  test_fetch_single_dataset_vcr.yaml  test_fetch_single_model_vcr.yaml  test_fetch_sorted_by_params_vcr[likes7d].yaml  test_fetch_sorted_by_params_vcr[likes].yaml  test_run_fetcher_then_converter_vcr.yaml
tests/integration/: test_convert_vcr.py
tests/tests/cassettes/: test_convert_from_cli.yaml  test_converter_no_translation_vcr.yaml  test_fetch_batch_vcr[both].yaml  test_fetch_batch_vcr[model].yaml  test_fetch_dataset_names_from_file_vcr.yaml  test_fetch_model_names_from_file_vcr.yaml  test_fetch_single_dataset_vcr.yaml  test_fetch_single_model_vcr.yaml  test_fetch_sorted_by_params_vcr[likes7d].yaml  test_run_fetcher_then_converter_vcr.yaml
tests/unit/: test_cli_fetch_unit.py  test_fetch_batch_vcr.py  test_fetch_name_vcr.py  test_fetch_params_vcr.py  test_fetch_restricted_vcr.py
