[tool.poetry]
name = "hf2dcat"
version = "0.1.0"
description = "A pipeline tool to fetch Hugging Face metadata and convert it to DCAT-AP RDF"
authors = [
    "Fangfang Wang <fangfang.wang@hrls.de>"
]
readme = "README.md"
packages = [
    { include = "hf2dcat", from = "src" },
    { include = "huggingface_fetcher", from = "src" },
    { include = "huggingface_converter", from = "src" }
]

[tool.poetry.scripts]
hf2dcat = "hf2dcat.cli:app"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
huggingface-hub = ">=0.30.2,<0.34.0"
rich = ">=14.0.0,<15.0.0"
datasets = ">=3.6.0,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
rdflib = ">=7.1.4,<8.0.0"
requests = ">=2.32.3,<3.0.0"
pyshacl = ">=0.30.1,<0.31.0"
typing-extensions = ">=4.15.0,<5.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
deep-translator = ">=1.11.4,<2.0.0"
python-iso639 = ">=2025.2.18,<2026.0.0"
typer = ">=0.17.4,<0.18.0"
pytest-recording = "^0.13.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
